# elite_robot_project_20260303

./: .gitignore  CS625机器人启动器.desktop  README.md  README.txt  basic_test.sh  build_log.txt  check_all_packages.sh  check_calibration_target.sh  check_driver_deps.sh  check_header_path.sh  check_launch_params.sh  check_package.sh  comprehensive_macro_fix.sh  comprehensive_recovery.sh  create_missing_files.sh  cs625_launcher.sh  cs625_wizard.sh  cs625_wizard_fixed.sh  debug_urdf.sh  deep_xacro_analysis.sh  diagnose_model_loss.sh  diagnose_project.sh  diagnose_visualization.sh  diagnose_workspace.sh  direct_diagnose_fix.sh  download_from_github.sh  download_official_files.sh  eli_cs_robot_usage_guide.sh  final_fix_scaled_controller.sh  final_fixes.sh  final_xacro_parameter_fix.sh  find_official_repo.sh  fix_all_issues.sh  fix_all_setvalue_warnings.sh  fix_calibration_config.sh  fix_calibration_deps.sh  fix_calibration_target.sh  fix_controller_header.sh  fix_cs625_direct.sh  fix_cs625_robot.sh  (+40 more)
src/: .gitignore
src/cs625_full_system/: package.xml  setup.cfg  setup.py
src/cs625_full_system/launch/: cs625_full_system.launch (backup).py  cs625_full_system.launch.py
src/eli_cs_controllers/src/: freedrive_controller.cpp  gpio_controller.cpp  scaled_joint_trajectory_controller.cpp  speed_scaling_state_broadcaster.cpp
src/eli_cs_robot_calibration/: CMakeLists.txt  CMakeLists.txt.backup  package.xml
src/eli_cs_robot_calibration/include/eli_cs_robot_calibration/: calibration_library.hpp
src/eli_cs_robot_calibration/src/: calibration_library.cpp
src/eli_cs_robot_description/: CMakeLists.txt
src/eli_cs_robot_description/launch/: view_cs.launch.py
src/eli_cs_robot_description/rviz/: view_robot.rviz
src/eli_cs_robot_description/urdf/: cs.urdf.xacro  cs625_for_moveit.urdf  cs625_generated.urdf  cs_macro.xacro
src/eli_cs_robot_driver/: CMakeLists.txt
src/eli_cs_robot_driver/config/: arm_controller.yaml  cs625_controllers (backup0).yaml  cs625_controllers (backup1).yaml  cs625_controllers (backup2).yaml  cs625_controllers.yaml  elite_cs_controllers (backup).yaml  elite_cs_controllers(backupnew).yaml  force_torque_sensor_broadcaster.yaml  forward_position_controller.yaml  tcp_pose_broadcaster.yaml
src/eli_cs_robot_driver/launch/: elite_control.launch (backup).py  elite_control.launch.py  elite_control.launch.py.bak
src/eli_cs_robot_driver/src/: hardware_interface.cpp
src/eli_cs_robot_simulation_gz/config/: cs_controllers.yaml
src/elite_cs625_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/elite_cs625_moveit_config/config/: cs625.srdf  cs625.srdf.xacro  cs625_moveit_controllers (backup).yaml  cs625_moveit_controllers.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz
src/elite_cs625_moveit_config/launch/: demo.launch.py  integrated_demo.launch.py  move_group.launch (backup).py  move_group.launch.py  moveit_rviz.launch (backup).py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/model_visualizer/: package.xml  setup.cfg  setup.py
src/tcp_bridge/: package.xml  setup.cfg  setup.py
src/tcp_bridge/launch/: cs625_launcher.py
src/tcp_bridge/tcp_bridge/: pose_sender_node.py  pose_to_tf_broadcaster.py  robot_commander.py  setup.cfg  static_model_publisher.py  tcp_server (Copy).py  tcp_server .py.backup  tcp_server.py
src/vision_bridge/: CMakeLists.txt  package.xml
src/vision_bridge/src/: tcp_pose_receiver.cpp
(+9 files in other folders)
