<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
<name>tcp_bridge</name>
<version>0.1.0</version>
<description>A TCP bridge to send commands to the Elite robot.</description>
<maintainer email="yff@todo.todo">yff</maintainer>
<license>Apache-2.0</license>

<buildtool_depend>ament_python</buildtool_depend>

<!-- 核心依赖 -->
<depend>rclpy</depend>
<depend>std_msgs</depend>
<depend>geometry_msgs</depend> <!-- 用于PoseStamped -->
<depend>sensor_msgs</depend>   <!-- 用于JointState -->
<depend>rcl_interfaces</depend> <!-- [改造新增] 用于参数服务, 例如 SetParameters -->

<!-- 执行时依赖Python的scipy库 -->
<exec_depend>python3-scipy</exec_depend>

<test_depend>ament_copyright</test_depend>
<test_depend>ament_flake8</test_depend>
<test_depend>ament_pep257</test_depend>
<test_depend>python3-pytest</test_depend>

<export>
<build_type>ament_python</build_type>
</export>
</package>

